<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="menu_option">Menu</string>
    <string name="title_activity_filter">Sign in</string>

    <string name="action_save">Save</string>
    <string name="begin_date">Date</string>
    <string name="sort_order">Sort Order</string>
    <string-array name="sort_order_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
</resources>
