<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.FilterActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:id="@+id/rlDate">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/begin_date"
                android:layout_gravity="left"
                android:layout_alignParentTop="true"
                android:id="@+id/tvBeginText"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etBeginDate"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/tvBeginText"
                android:text="" />
        </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@+id/rlDate"
        android:id="@+id/rlSort">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sort_order"
            android:layout_gravity="left"
            android:id="@+id/tvSortOrder"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <Spinner
            android:id="@+id/dropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tvSortOrder"
            android:entries="@array/sort_order_array"
            android:prompt="@string/sort_order" />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_below="@+id/rlSort"
        android:id="@+id/rlDeskVal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/news_desk_values"
            android:layout_gravity="left"
            android:id="@+id/tvNewsDeskValues"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <CheckBox android:id="@+id/checkbox_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:onClick="onCheckboxClicked"
            android:layout_toRightOf="@+id/tvNewsDeskValues"
            android:layout_toEndOf="@+id/tvNewsDeskValues" />

        <CheckBox android:id="@+id/checkbox_fashion_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion_style"
            android:layout_below="@+id/checkbox_arts"
            android:layout_toRightOf="@+id/tvNewsDeskValues"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:layout_below="@+id/checkbox_fashion_style"
            android:layout_toRightOf="@+id/tvNewsDeskValues"
            android:onClick="onCheckboxClicked" />

        <Button
            android:id="@+id/btnSave"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save"
            android:textStyle="bold"
            android:layout_below="@+id/checkbox_sports"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="onSubmit" />
    </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
